<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:letterSpacing="-0.05"
            android:textFontWeight="900"
            android:textSize="42sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:autoLink="web"
            android:minHeight="48dp"
            android:textFontWeight="900"
            android:text="@string/app_url" />

        <TextView
            android:id="@+id/editTextTextMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_description"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginHorizontal="0dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_favorites"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/cygold"
                android:text="@string/nav_favorites"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textFontWeight="900"
                app:cornerRadius="5dp" />

            <Button
                android:id="@+id/button_find"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/cydarklime"
                android:text="@string/nav_find"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textFontWeight="900"
                app:cornerRadius="5dp" />

            <Button
                android:id="@+id/button_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@string/nav_list"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textFontWeight="900"
                app:cornerRadius="5dp" />

            <Button
                android:id="@+id/button_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@string/nav_about"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textFontWeight="900"
                app:cornerRadius="5dp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>