<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ListActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        app:titleTextColor="@android:color/white"
        android:background="?attr/colorPrimary"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textFontWeight="900"
                android:layout_marginBottom="30dp"
                android:text="@string/search_title"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:layout_width="150sp"
                    android:layout_marginRight="15sp"
                    android:layout_height="wrap_content"
                    android:minHeight="50sp"
                    android:id="@+id/availabilityPicker"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_available"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:layout_width="150sp"
                    android:layout_marginRight="15sp"
                    android:layout_height="wrap_content"
                    android:minHeight="50sp"
                    android:id="@+id/deltaPicker"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_delta"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:layout_width="150sp"
                    android:layout_marginRight="15sp"
                    android:layout_height="wrap_content"
                    android:minHeight="50sp"
                    android:id="@+id/floorPicker"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_floor"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/capacityPicker"
                    android:layout_width="150sp"
                    android:layout_marginRight="15sp"
                    android:layout_height="wrap_content"
                    android:minHeight="50sp"
                    android:autofillHints="0"
                    android:textColor="@color/white"
                    android:inputType="number" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_capacity"/>

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/red"
                android:textColor="@color/white"
                android:layout_marginTop="30dp"
                android:id="@+id/resetButton"
                android:textSize="18sp"
                app:cornerRadius="5dp"
                android:textFontWeight="900"
                android:text="@string/search_reset"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:id="@+id/searchButton"
                android:textSize="18sp"
                app:cornerRadius="5dp"
                android:textFontWeight="900"
                android:text="@string/button_search"/>

            <LinearLayout
                android:id="@+id/frame_holder"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/errorText"
                android:gravity="center"
                android:textColor="@color/red"
                android:textSize="24sp"
                android:visibility="gone"/>

        </LinearLayout>


    </ScrollView>



</LinearLayout>